infra/k8s-prod/ticketing_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: ticketing-ingress
    namespace: node-ticketing
    annotations:
      kubernetes.io/ingress.class: nginx
      kubernetes.io/tls-acme: "true"
      cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
    tls:
    - secretName: node-ticketing-tls-cert
      hosts:
        - node-ticketing.bpx-training.info
    rules:
        - host: node-ticketing.bpx-training.info
          http:
            paths:
                - path: /api/users
                  pathType: Prefix
                  backend:
                    service:
                        name: auth-svc
                        port:
                            number: 3000
                - path: /
                  pathType: Exact
                  backend:
                    service:
                        name: client-svc
                        port:
                            number: 3000
                - path: /api/tickets
                  pathType: Prefix
                  backend:
                    service:
                        name: tickets-svc
                        port:
                            number: 3000
                - path: /api/orders
                  pathType: Prefix
                  backend:
                    service:
                        name: orders-svc
                        port:
                            number: 3000
                - path: /api/payments
                  pathType: Prefix
                  backend:
                    service:
                        name: payments-svc
                        port:
                            number: 3000
